--- a/style.css
+++ b/style.css
@@ -1,5 +1,29 @@
+/* Ids */
 #title {
     margin-left:auto;
     margin-right:auto;
     width: 75%;
+    font-family: 'Courier New', Courier, monospace;
+    font-style: italic;
+}
+
+/* Classes */
+.ButtonLayout {
+    display: flex;
+    flex-flow: row wrap;
+    
+    width: 250px;
+    height: 100px;
+    justify-content: space-between;
+    align-items: space-between;
+    background-color: red;
+}
+.DownloadButton {
+    width: 100px;
+    flex-shrink: 0;
+}
+
+/* Core HTML */
+p {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
