--- a/style.css
+++ b/style.css
@@ -12,15 +12,28 @@
     display: flex;
     flex-flow: row wrap;
     
-    width: 250px;
-    height: 100px;
+    width: 1200px;
     justify-content: space-between;
     align-items: space-between;
     background-color: red;
+
+    margin-left:auto;
+    margin-right:auto;
 }
 .DownloadButton {
-    width: 100px;
-    height: 75px;
+    color: black;
+    background-color: purple;
+    font-size:30px;
+    text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    border-style: solid;
+    border-width: 10px;
+    border-radius: 25px;
+    border-color:blueviolet;
+    
+    width: 250px;
 }
 
 /* Core HTML */
