--- a/style.css
+++ b/style.css
@@ -12,28 +12,45 @@
     display: flex;
     flex-flow: row wrap;
     
-    width: 1200px;
+    width: 700px;
     justify-content: space-between;
     align-items: space-between;
-    background-color: red;
 
     margin-left:auto;
     margin-right:auto;
 }
 .DownloadButton {
     color: black;
-    background-color: purple;
-    font-size:30px;
+    background-color: orangered;
     text-decoration: none;
-    padding-left: 10px;
-    padding-right: 10px;
 
     border-style: solid;
     border-width: 10px;
     border-radius: 25px;
-    border-color:blueviolet;
+    border-color: darkred;
     
-    width: 250px;
+    width: 125px;
+}
+.DownloadText {
+    padding:5px;
+    text-align:center;
+    font-size:12px;
+    
+}
+.NonFlexButtons {
+    color: black;
+    background-color: orangered;
+    font-size:12px;
+    text-decoration: none;
+    padding-left:10px;
+    padding-right:10px;
+
+    border-style: solid;
+    border-width: 10px;
+    border-radius: 25px;
+    border-color: darkred;
+    
+    width: 125px;
 }
 
 /* Core HTML */
